# DeleteDuplicatedFiles

./: .gitignore  CMakeLists.txt  DeleteDuplicatedFiles.pro  README.md  duplicatefsmodel.cpp  duplicatefsmodel.h  fsitem.cpp  fsitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/: FileType.h  duplicatefsmodel.cpp  duplicatefsmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
